<?xml version="1.0" encoding="utf-8"?>
<!-- 2016-11-01 K.OHWADA -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory 
        android:title="@string/preference_title_main">

        <EditTextPreference   
            android:key="url"  
            android:title="@string/edittext_pref_url_title"  
            android:summary="@string/edittext_pref_url_summary"   
            android:defaultValue="http://example.com/api" />

    </PreferenceCategory>
                
    <PreferenceCategory 
        android:title="@string/preference_title_debug">

        <CheckBoxPreference
            android:key="display_event"
            android:title="@string/checkbox_pref_display_event_title"
            android:summary="@string/checkbox_pref_display_event_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="refresh_interval"
            android:title="@string/list_pref_refresh_interval_title"
            android:dialogTitle="@string/list_pref_refresh_interval_title"
            android:summary="@string/list_pref_refresh_interval_summary"
            android:entries="@array/list_pref_refresh_interval_entries"
            android:entryValues="@array/list_pref_refresh_interval_entryvalues"
            android:defaultValue="10" />

    </PreferenceCategory>
</PreferenceScreen>
