<?xml version="1.0" encoding="utf-8"?>
<!-- 2016-11-01 K.OHWADA -->
<LinearLayout  
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView
        android:text="@string/title"
        android:textSize="20sp"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />
                        
    <LinearLayout 
        android:orientation="horizontal" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/time"
            android:textSize="20sp"
            android:layout_width="50sp" 
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TextView_time"
            android:textSize="20sp"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout 
        android:orientation="horizontal" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/temperature"
            android:textSize="20sp"
            android:layout_width="50sp" 
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TextView_temperature"
            android:textSize="20sp"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout 
        android:orientation="horizontal" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/humidity"
            android:textSize="20sp"
            android:layout_width="50sp" 
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TextView_humidity"
            android:textSize="20sp"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout 
        android:orientation="horizontal" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/pressure"
            android:textSize="20sp"
            android:layout_width="50sp" 
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TextView_pressure"
            android:textSize="20sp"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout 
        android:orientation="horizontal" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/light"
            android:textSize="20sp"
            android:layout_width="50sp" 
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TextView_light"
            android:textSize="20sp"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout 
        android:orientation="horizontal" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/noise"
            android:textSize="20sp"
            android:layout_width="50sp" 
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TextView_noise"
            android:textSize="20sp"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />

    </LinearLayout> 
    
    <Button
        android:id="@+id/Button_refresh"
        android:text="@string/refresh"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" />
        android:layout_marginTop="10dp" />
            
    <ListView
        android:id="@+id/ListView_event"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:transcriptMode="alwaysScroll" />
 
</LinearLayout>
